--- a/4-DOM-Pig-Game/style.css
+++ b/4-DOM-Pig-Game/style.css
@@ -140,6 +140,7 @@ i {
 .btn-new { top: 45px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
+.final-score:focus {outline: none;}
 
 .dice {
     position: absolute;
@@ -152,3 +153,19 @@ i {
 
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
+
+
+.final-score {
+    position: absolute;
+    top: 520px;
+    width: 160px;
+    height: 30px;
+    left: 50%;
+    color: #555;
+    font-size: 18px;
+    transform: translateX(-50%);
+    font-family: Lato;
+    padding: 10px;
+    text-align: center;
+    text-transform: uppercase;
+}
