--- a/4-DOM-Pig-Game/style.css
+++ b/4-DOM-Pig-Game/style.css
@@ -142,13 +142,23 @@ i {
 .btn-hold { top: 467px;}
 .final-score:focus {outline: none;}
 
-.dice {
+#dice-1 {
     position: absolute;
     left: 50%;
-    top: 178px;
+    top: 100px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+
+#dice-2 {
+    position: absolute;
+    left: 50%;
+    top: 230px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+
 }
 
 .winner { background-color: #f7f7f7; }
